--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Created by Vercel CLI
 CLERK_SECRET_KEY="sk_test_8tLe9ZknBdsyrEa1rwRjGkcemqsOi5k6leba01MU1x"
-MY_URL="https://icom.vercel.app"
+MY_URL="https://e-commerce-hackathon-ahmeddotdev.vercel.app/"
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL="/"
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL="/"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_dXAtc3VuYmVhbS0yOC5jbGVyay5hY2NvdW50cy5kZXYk"
