--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "flowbite": "^1.6.5",
+    "lucide-react": "^0.269.0",
     "next": "^13.4.7",
     "next-navigation": "^1.0.6",
     "next-sanity": "^4.3.3",
